# islamqa-api

./: README.md  main.py  pyproject.toml
apps/: urls.py
apps/authentication/: models.py  serializers.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py  0002_session_remember_me.py
apps/events/: admin.py  base.py  manager.py  models.py  tasks.py
apps/events/migrations/: 0001_initial.py
apps/user/: events.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py  0002_remove_user_username.py  0003_alter_user_managers.py  0004_alter_user_password.py  0005_user_is_scholar.py
core/jwt/: authentication.py
core/restapi/: exceptions.py  filters.py  permissions.py  response.py
core/restapi/views/: __init__.py  crud.py  request.py
core/utils/: aes.py
proj/: settings.py  urls.py
templates/email/: base.html  verify_email.html
